  shows qutebrowser messages based on a command's standard output/error.
- Improved insert mode detection for some CodeMirror usages (e.g. in
  JupyterLab and Jupyter Notebook).
- If JavaScript is disabled globally, `file://*` now doesn't automatically have
  it enabled anymore. Run `:set -u file://* content.javascript.enabled true` to
  restore the previous behavior.
- Performance improvements for the following areas:
  * Adding settings with URL patterns
  * Matching of settings using URL patterns

Fixed
~~~~~

- Downloads (e.g. via `:download`) now see the same user agent header as
  webpages, which fixes cases where overly restrictive servers/WAFs closed the
  connection before.
- dictcli.py now works correctly on Windows again.
- The logic for `:restart` has been revisited which should fix issues with
  relative basedirs.
- Remaining issues (mostly warnings) related to Python 3.8, especially for
  QtWebKit.
- Workaround for a Qt bug where a page never finishes loading with a
  non-overridable TLS error (e.g. due to HSTS).
- The `qute://configdiff` page now doesn't show built-in settings (e.g.
  javascript being enabled for `qute://` and `chrome://` pages) anymore.
- The `qute-lastpass` userscript now stops prompting for passwords when
  cancelling the password input.
- The tab hover text now shows ampersands (&) correctly.
- Various improvements for URL/searchengine detection:
  - Strings with a dot but with characters not allowed in a URL (e.g. an
    underscore) are now not treated as URL anymore.
  - Strings like "5/8" are now not treated as IP anymore.
  - URLs with an explicit scheme and a space (%20) are correctly treated as
    URLs.
  - Mail addresses are now treated as search terms.
  - With `url.open_base_url` set, searching for a search engine name now works.
  - `url.open_base_url = True` together with `url.auto_search = 'never'` is now
    handled correctly.
  - Fixed crash when a search engine URL turns out to be invalid.